updated profile picture, picture not showing, bugfix needed

--- a/Frontend/src/pages/css/Profile.css
+++ b/Frontend/src/pages/css/Profile.css
@@ -97,3 +97,45 @@ outline: 4px solid white
 border-bottom: 2px solid #fe854c;
 }
 
+.hide{
+  display: none;
+}
+
+.form-edit{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 5px;
+  margin-bottom:20px ;
+}
+
+.form-edit div{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.form-edit input[type=text]{
+      border-radius: 20px;
+        padding: 5px;
+        width: 50%;
+        border-bottom: 1px solid rgb(224, 224, 224);
+        border-style: none;
+        border: 1px solid rgb(172, 172, 172);
+}
+
+
+.form-edit input[type=file]{
+  display: none;
+}
+
+.custom-upload{
+    border: 1px solid #ccc;
+  border-radius: 5px;
+    background-color: #f8996d;
+    color: white;
+    border-style: none;
+      display: inline-block;
+      padding: 6px 12px;
+      cursor: pointer;
+}
